--- a/HomeTask/HomeTask/Base.lproj/Main.storyboard
+++ b/HomeTask/HomeTask/Base.lproj/Main.storyboard
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Fit-xZ-HBF">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -7,24 +8,165 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Landing View Controller-->
+        <!--Characters View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LandingViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CharactersViewController" customModule="HomeTask" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="150" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="gp8-pc-GRj">
+                                <rect key="frame" x="0.0" y="149" width="414" height="713"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="characterIdentifier" rowHeight="154" id="aKb-vV-iXX" customClass="CharacterTableViewCell" customModule="HomeTask" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="154"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aKb-vV-iXX" id="PUI-fR-9NT">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="154"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wau-J7-Ehi">
+                                                    <rect key="frame" x="10" y="10" width="394" height="134"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RnF-g8-CON">
+                                                            <rect key="frame" x="105" y="15" width="284" height="21"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pff-kG-6yj">
+                                                            <rect key="frame" x="5" y="0.0" width="90" height="130"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="90" id="Yvb-je-iM5"/>
+                                                                <constraint firstAttribute="height" constant="130" id="eRl-Ks-wJ7"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j8l-ir-jHl">
+                                                            <rect key="frame" x="105" y="36" width="286" height="95"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="RnF-g8-CON" firstAttribute="top" secondItem="Wau-J7-Ehi" secondAttribute="top" constant="15" id="40M-35-Hgh"/>
+                                                        <constraint firstAttribute="trailing" secondItem="j8l-ir-jHl" secondAttribute="trailing" constant="3" id="9BA-uh-suK"/>
+                                                        <constraint firstItem="RnF-g8-CON" firstAttribute="leading" secondItem="Pff-kG-6yj" secondAttribute="trailing" constant="10" id="Cgd-F9-RBW"/>
+                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Pff-kG-6yj" secondAttribute="bottom" constant="4" id="Dpz-P7-vG2"/>
+                                                        <constraint firstAttribute="bottom" secondItem="j8l-ir-jHl" secondAttribute="bottom" constant="3" id="MtD-Gq-f5s"/>
+                                                        <constraint firstItem="j8l-ir-jHl" firstAttribute="top" secondItem="RnF-g8-CON" secondAttribute="bottom" id="QT1-TS-cPr"/>
+                                                        <constraint firstItem="Pff-kG-6yj" firstAttribute="leading" secondItem="Wau-J7-Ehi" secondAttribute="leading" constant="5" id="T0r-iG-DYC"/>
+                                                        <constraint firstItem="j8l-ir-jHl" firstAttribute="leading" secondItem="Pff-kG-6yj" secondAttribute="trailing" constant="10" id="bfg-iz-Lds"/>
+                                                        <constraint firstItem="Pff-kG-6yj" firstAttribute="top" secondItem="Wau-J7-Ehi" secondAttribute="top" id="o82-d4-Jz0"/>
+                                                        <constraint firstAttribute="trailing" secondItem="RnF-g8-CON" secondAttribute="trailing" constant="5" id="wdN-1r-snu"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="10"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="Wau-J7-Ehi" secondAttribute="bottom" constant="10" id="2xK-IT-49o"/>
+                                                <constraint firstItem="Wau-J7-Ehi" firstAttribute="leading" secondItem="PUI-fR-9NT" secondAttribute="leading" constant="10" id="Ab7-7P-dAW"/>
+                                                <constraint firstItem="Wau-J7-Ehi" firstAttribute="top" secondItem="PUI-fR-9NT" secondAttribute="top" constant="10" id="ZFB-UV-o53"/>
+                                                <constraint firstAttribute="trailing" secondItem="Wau-J7-Ehi" secondAttribute="trailing" constant="10" id="fJ8-Cf-xv2"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="name" destination="RnF-g8-CON" id="bdQ-cL-Zn7"/>
+                                            <outlet property="resultDescription" destination="j8l-ir-jHl" id="xcf-74-jkn"/>
+                                            <outlet property="thumbnail" destination="Pff-kG-6yj" id="Dum-iG-lLI"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="oce-8x-AzV"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="2Tr-hC-ZgD"/>
+                                </connections>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CJC-Dm-qOC">
+                                <rect key="frame" x="0.0" y="88" width="414" height="50"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GqN-cT-gpc">
+                                        <rect key="frame" x="159" y="8" width="97" height="34"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="1go-XF-Yak"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="CJC-Dm-qOC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="YVr-1y-hWe"/>
+                            <constraint firstItem="gp8-pc-GRj" firstAttribute="top" secondItem="CJC-Dm-qOC" secondAttribute="bottom" constant="11" id="bzj-Xh-qoA"/>
+                            <constraint firstItem="CJC-Dm-qOC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eGM-qY-22u"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gp8-pc-GRj" secondAttribute="bottom" id="fVi-IV-Jqu"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gp8-pc-GRj" secondAttribute="trailing" id="ffo-bd-PFe"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CJC-Dm-qOC" secondAttribute="trailing" id="oUH-1b-LlV"/>
+                            <constraint firstItem="gp8-pc-GRj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="xHD-d4-PHp"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="P00-hV-TCb"/>
+                    <connections>
+                        <outlet property="tableView" destination="gp8-pc-GRj" id="MDr-tW-zJ5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="979.71014492753636" y="65.625"/>
+        </scene>
+        <!--Char Detail View Controller-->
+        <scene sceneID="cia-fv-vne">
+            <objects>
+                <viewController storyboardIdentifier="CharDetailViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="x1l-R0-2Ps" customClass="CharDetailViewController" customModule="HomeTask" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3JF-Cw-92Z">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Yny-ID-wmd"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JQ2-U5-WKN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1731.8840579710147" y="65.625"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="LcW-FI-9xC">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Fit-xZ-HBF" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fQc-D4-YQx">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="LDP-H1-Te3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r3e-bL-tdt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="69.565217391304358" y="65.625"/>
         </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
